--- a/_posts/2018-02-03-welcome.md
+++ b/_posts/2018-02-03-welcome.md
@@ -2,54 +2,9 @@
 title:  "Welcome"
 date:   2018-02-03 21:42:33 +0100
 ---
-You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
-Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll Talk][jekyll-talk].
+The home of the Bumpels just launched.
 <!--more-->
-a
+It is a first very rudimental version of what i have in mind. So keep _curious_ what comes next!
 
-d
-
-s
-
-d
-
-a
-
-s
-
-f
-
-a
-
-f
-
-s
-
-a
-
-f
-
-d
-
-d
-
-d
-
-d
-
-d
-
-d
-
-d
-
-d
-
-d
-
-d
-
-[jekyll-docs]: https://jekyllrb.com/docs/home
-[jekyll-gh]:   https://github.com/jekyll/jekyll
-[jekyll-talk]: https://talk.jekyllrb.com/
+Read more on the [about](/about) page.
