fixed small typo

--- a/_posts/2018-03-17-gallery.md
+++ b/_posts/2018-03-17-gallery.md
@@ -13,7 +13,7 @@ At the start only 3 Bumpels inhabit the gallery, but more are on the way. Now yo
 
 Try it yourself [here][2].
 
-<small>The image ist made with the help of [magicmockups][1].</small>
+<small>The mockup is made with the help of [magicmockups][1].</small>
 
 [1]: http://magicmockups.com
 [2]: {{ '/gallery' | relative_url }}
