--- a/_posts/2018-02-03-welcome.md
+++ b/_posts/2018-02-03-welcome.md
@@ -8,4 +8,6 @@ The home of the Bumpels just launched.
 It is a first very rudimental version of what i have in mind. So keep _curious_ what comes next!
 <!--more-->
 
-Read more on the [about](/about) page.
+Read more on the [about][1] page.
+
+[1]: {{ '/about' | relative_url }}
