--- a/src/content/posts/launch.mdx
+++ b/src/content/posts/launch.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Launch"
 date: "2018-02-03"
+author: "Axel Rojas Bachem"
+important: true
 ---
 
 The home of the Bumpels just launched.
