added emoji support to excerpt

--- a/src/content/posts/launch.mdx
+++ b/src/content/posts/launch.mdx
@@ -5,7 +5,7 @@ author: "Axel Rojas Bachem"
 important: true
 ---
 
-The home of the Bumpels just launched.
+The home of the Bumpels just launched. :heart:
 
 It is a first very rudimental version of what i have in mind. So keep _curious_ what comes next!
 
