--- a/src/content/posts/gallery.mdx
+++ b/src/content/posts/gallery.mdx
@@ -2,6 +2,8 @@
 title: "Gallery"
 date: "2018-03-17"
 author: "Axel Rojas Bachem"
+titleImg: ../images/gallery.jpg
+imgSoruceText: The mockup is made with the help of <a href="https://magicmockups.com/" target="_blank" rel="noreferrer">magicmockups</a>
 ---
 
 The Gallery is here!
@@ -11,5 +13,3 @@ The Gallery is here!
 At the start only 3 Bumpels inhabit the gallery, but more are on the way. Now you can see that they have names and also it's possible to enlarge them and look at them in all their glory :sunglasses:.
 
 Try it yourself <Link to="/gallery">here</Link>.
-
-<small>The mockup is made with the help of <a href="https://magicmockups.com/" target="_blank" rel="noreferrer">magicmockups</a></small>
