--- a/src/content/posts/launch.mdx
+++ b/src/content/posts/launch.mdx
@@ -2,6 +2,8 @@
 title: "Launch"
 date: "2018-02-03"
 author: "Axel Rojas Bachem"
+titleImg: ../images/launch.jpg
+imgSoruceText: The mockup is made with the help of <a href="https://magicmockups.com/" target="_blank" rel="noreferrer">magicmockups</a>
 important: true
 ---
 
