--- a/src/content/posts/relaunch.mdx
+++ b/src/content/posts/relaunch.mdx
@@ -1,9 +1,8 @@
 ---
-title: "Gallery with extra long title lorem ipsum"
-date: "2018-03-17"
+title: "Relaunch - Bumpels v2"
+date: "2020-05-24"
 author: "Axel Rojas Bachem"
-titleImg: ../images/gallery.jpg
-imgSoruceText: The mockup is made with the help of <a href="https://magicmockups.com/" target="_blank" rel="noreferrer">magicmockups</a>
+titleImg: ../images/react_logo.jpg
 ---
 
 The Gallery is here!
