use emoji at more places

--- a/src/content/posts/relaunch.mdx
+++ b/src/content/posts/relaunch.mdx
@@ -2,7 +2,8 @@
 title: "Relaunch - Bumpels v2"
 date: "2020-05-24"
 author: "Axel Rojas Bachem"
-titleImg: ../images/react_logo.jpg
+titleImg: "../images/react_logo.jpg"
+imgSoruceText: "Crazy :heart:"
 ---
 
 The Gallery is here!
